<resources>
    <string name="app_name">Reog Apps</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">Enter your email address</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="have_not_account_register">Haven\'t an account? <u>Register</u></string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="re_password">Re-password</string>
    <string name="re_password_hint">Re-enter your password</string>
    <string name="name">Name</string>
    <string name="member_since">Member Since</string>
    <string name="last_login">Last Login</string>
    <string name="explore">Explore</string>
    <string name="history">History</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="news">News</string>
    <string name="sites">Sites</string>
    <string name="foods">Foods</string>
    <string name="explore">Explore</string>
</resources>