<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF4ED"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="#BF5B5B"
                app:civ_circle_background_color="#BF5B5B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_first_character"
                style="@style/TextAppearance.AppCompat.Display3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_icon"
                app:layout_constraintEnd_toEndOf="@id/img_icon"
                app:layout_constraintStart_toStartOf="@id/img_icon"
                app:layout_constraintTop_toTopOf="@id/img_icon"
                tools:text="E" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="28dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_icon" />

            <TextView
                android:id="@+id/tv_full_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="Erik Rio Setiawan" />

            <View
                android:id="@+id/v_line_name"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_full_name"
                app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/v_line_name" />

            <TextView
                android:id="@+id/tv_email_address"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                tools:text="erikriosetiawan15@gmail.com" />

            <View
                android:id="@+id/v_line_email"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email_address" />

            <TextView
                android:id="@+id/tv_member_since"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/member_since"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/v_line_email" />

            <TextView
                android:id="@+id/tv_member_since_date"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_member_since"
                app:layout_constraintTop_toBottomOf="@id/tv_member_since"
                tools:text="2020/09/14" />

            <View
                android:id="@+id/v_line_member_since"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_member_since"
                app:layout_constraintTop_toBottomOf="@id/tv_member_since_date" />

            <TextView
                android:id="@+id/tv_last_login"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_login"
                app:layout_constraintStart_toStartOf="@id/tv_member_since"
                app:layout_constraintTop_toBottomOf="@id/v_line_member_since" />

            <TextView
                android:id="@+id/tv_last_login_date"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_last_login"
                app:layout_constraintTop_toBottomOf="@id/tv_last_login"
                tools:text="2020/09/14" />

            <View
                android:id="@+id/v_line_last_login"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_last_login"
                app:layout_constraintTop_toBottomOf="@id/tv_last_login_date" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.startapp.sdk.ads.banner.Mrec
                android:id="@+id/startAppMrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_line_last_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>